--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,42 +1,32 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.li-hover{
+    transition: all 0.3s ease-in-out;
+    cursor: pointer;
+    height: 30px;
+    width: 66px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    color: black;
+    &:hover{
+        background-color: rgb(158, 158, 158);
+        color: white;
+        border-radius: 10px;
+    }
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+.navactive{
+    background-color:rgb(129, 129, 129) ;
+    color: white;
+    border-radius: 10px;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.login-singup-btn{
+    font-family:'Times New Roman', Times, serif;
+    font-size: 15px;
+    &:hover{
+        background-color: rgb(7, 7, 195) !important;
+    }
+    &:active{
+        
+        background-color: rgb(9, 9, 247) !important;
+    }
 }
