--- a/client/src/App.css
+++ b/client/src/App.css
@@ -89,7 +89,8 @@
 }
 
 .btn-singup {
-  padding: 15px;
+  /* padding: 15px; */
+  height: 55px;
   margin: 25px 0px;
   width: 290px;
   font-size: 15px;
